--- a/index.html
+++ b/index.html
@@ -95,9 +95,10 @@
     </div>
 
     <!-- Ramo de tulipanes elegido -->
-    <img class="bouquet" src="LaBotanika25.webp" alt="Ramo de tulipanes" />
+    <img class="<img class="bouquet" src="img/LaBotanika25.webp" alt="Ramo de tulipanes" />" />
 
   </div>
 </body>
 </html>
+
 
