--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
         <path d="M12 21s-7.5-4.7-9.3-8.1C-1 7.9 4.2 3 7.9 6.1 9.6 7.6 12 10 12 10s2.4-2.4 4.1-3.9C19.8 3 25 7.9 21.3 12.9 19.5 16.3 12 21 12 21z" fill="url(#g)" opacity="0.98"/>
       </svg>
     </div>
-
     <!-- Ramo de tulipanes elegido -->
-    <img class="<img class="bouquet" src="img/LaBotanika25.webp" alt="Ramo de tulipanes" />"
+ <img class="bouquet" src="LaBotanika25.jpg" alt="Ramo de tulipanes" />
   </div>
 </body>
 </html>
+
 
 
 
