--- a/index.html
+++ b/index.html
@@ -94,10 +94,11 @@
       </svg>
     </div>
     <!-- Ramo de tulipanes elegido -->
-<img class="bouquet" src="https://upload.wikimedia.org/wikipedia/commons/7/73/Tulips_in_spring.jpg" alt="Ramo de tulipanes" />
+<img class="bouquet" src="LaBotanika25.jpg" alt="Ramo de tulipanes" />
   </div>
 </body>
 </html>
+
 
 
 
